--- a/5-2-react-starter/package.json
+++ b/5-2-react-starter/package.json
@@ -12,6 +12,9 @@
     "test:grader": "node tests/test-grader.cjs"
   },
   "dependencies": {
+    "i": "^0.3.7",
+    "npm": "^11.6.1",
+    "or": "^0.2.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
